// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <ul
      class="sc-dFRpbK sc-gIvpjk glUcXM hsBJgS sc-euEtCV iVODFF"
    >
      <li>
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
        >
          You can put 
          <a
            class="sc-eGJWMs cCoTdW sc-csTbgd gyTKxM"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
        >
          Multiline text
          <div
            class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <ol
      class="sc-dFRpbK sc-bsatvv glUcXM BRxEv sc-euEtCV iVODFF"
    >
      <li>
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
        >
          You can put 
          <a
            class="sc-eGJWMs cCoTdW sc-csTbgd gyTKxM"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
        >
          Multiline text
          <div
            class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
